--- a/web1/src/app/report/cash-collection/cash-collection.component.html
+++ b/web1/src/app/report/cash-collection/cash-collection.component.html
@@ -110,11 +110,13 @@
                                                         aria-hidden="true" type="button" (click)="exportAsXLSX()"> </i>
                                                     <button class="bg_none ms-4"
                                                         printTitle="Cash_Collection Report {{this.selectsShop}}"
+                                                        
                                                         printSectionId="PurchasePDF" ngxPrint ngxPrint
-                                                        [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'zoom': '80%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif'} }">
+                                                        [printStyle]="{th : {'color': '#000','border': '1px solid #000','font-Size':'17px'},td : {'color': '#000','border': '1px solid #000','text-align':'center'}, thead : {'background': '#e2e2e2'}, table:{'zoom': '80%','border-collapse': 'collapse','margin': '0', 'panding':'0', 'font-family': 'Arial, Helvetica, sans-serif','background-image' : 'url({{this.selectsShopimg}})', 'background-size':'100%' , 'height':'100%'} }">
                                                         <i class="far fa-file-pdf "
                                                             style="color: #1a1e90;font-size: 22px;cursor: pointer;">
                                                         </i>
+                                                        
                                                     </button>
                                                 </td>
                                                 <td></td>
