--- a/web1/src/app/report/purchase-report/purchase-report.component.html
+++ b/web1/src/app/report/purchase-report/purchase-report.component.html
@@ -11,7 +11,7 @@
                 </div>
                 <div class="col-md-1 col-4 ">
                   <button (click)="showFitter()"  mat-raised-button color="primary">
-                    Show
+                    Show Filter
                   </button>
                 </div>
               </div>
