--- a/web1/src/app/report/vendor-credit/vendor-credit.component.html
+++ b/web1/src/app/report/vendor-credit/vendor-credit.component.html
@@ -12,7 +12,7 @@
                                 </div>
                                 <div class="col-md-1 col-4 ">
                                     <button (click)="showFitter()"  mat-raised-button color="primary">
-                                      Show
+                                        Show Filter
                                     </button>
                                   </div>
                             </div>
