--- a/web1/src/app/sale/billing/billing.component.html
+++ b/web1/src/app/sale/billing/billing.component.html
@@ -348,7 +348,7 @@
                                                         </datalist>
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="number" name="REDPAxis"
+                                                        <input class="inputWidth box"  name="REDPAxis"
                                                             [(ngModel)]="spectacle.REDPAxis" >
                                                     </div>
                                                     <div class="col-1">
@@ -384,7 +384,7 @@
                                                         </datalist>
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="number" name="LEDPAxis"
+                                                        <input class="inputWidth box"  name="LEDPAxis"
                                                             [(ngModel)]="spectacle.LEDPAxis" >
                                                     </div>
                                                     <div class="col-1">
@@ -426,7 +426,7 @@
                                                         </datalist>
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="number" name="RENPAxis"
+                                                        <input class="inputWidth box"  name="RENPAxis"
                                                             [(ngModel)]="spectacle.RENPAxis">
                                                     </div>
                                                     <div class="col-1">
@@ -461,7 +461,7 @@
                                                         </datalist>
                                                     </div>
                                                     <div class="col-1">
-                                                        <input class="inputWidth box" type="number" name="LENPAxis"
+                                                        <input class="inputWidth box"  name="LENPAxis"
                                                             [(ngModel)]="spectacle.LENPAxis">
                                                     </div>
                                                     <div class="col-1">
@@ -522,7 +522,7 @@
                                                             </datalist>
                                                         </div>
                                                         <div class="col-2 p-0">
-                                                            <input class="inputWidth box" type="number" name="REDPAxis"
+                                                            <input class="inputWidth box"  name="REDPAxis"
                                                                 [(ngModel)]="spectacle.REDPAxis" >
                                                         </div>
                                                         <div class="col-2 p-0">
@@ -561,7 +561,7 @@
                                                             </datalist>
                                                         </div>
                                                         <div class="col-2 p-0">
-                                                            <input class="inputWidth box" type="number" name="RENPAxis"
+                                                            <input class="inputWidth box" name="RENPAxis"
                                                                 [(ngModel)]="spectacle.RENPAxis">
                                                         </div>
                                                         <div class="col-2 p-0">
@@ -617,7 +617,7 @@
                                                             </datalist>
                                                         </div>
                                                         <div class="col-2 p-0">
-                                                            <input class="inputWidth box" type="number" name="LEDPAxis"
+                                                            <input class="inputWidth box"  name="LEDPAxis"
                                                                 [(ngModel)]="spectacle.LEDPAxis" >
                                                         </div>
                                                         <div class="col-2 p-0">
@@ -655,7 +655,7 @@
                                                             </datalist>
                                                         </div>
                                                         <div class="col-2 p-0">
-                                                            <input class="inputWidth box" type="number" name="LENPAxis"
+                                                            <input class="inputWidth box"  name="LENPAxis"
                                                                 [(ngModel)]="spectacle.LENPAxis">
                                                         </div>
                                                         <div class="col-2 p-0">
