--- a/web1/src/app/inventory/supplier/supplier.component.html
+++ b/web1/src/app/inventory/supplier/supplier.component.html
@@ -363,28 +363,28 @@
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Credit Number</mat-label>
                     <input matInput name="CreditNumber" type="text" [(ngModel)]="note.CreditNumber"
-                    required  #MobileNo2control>
+                    required  #CreditNumbercontrol>
                 </mat-form-field>
             </div>
             <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Credit Date</mat-label>
                     <input matInput name="CreditDate" type="date" [(ngModel)]="note.CreditDate"
-                    required  #MobileNo2control>
+                    required  #CreditDatecontrol>
                 </mat-form-field>
             </div>
             <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Amount</mat-label>
                     <input matInput name="Amount" type="number" min="0" [(ngModel)]="note.Amount"
-                    required #MobileNo2control>
+                    required #Amountcontrol>
                 </mat-form-field>
             </div>
             <div class="col-xl-6 col-lg-3 col-md-6 col-6 mb-0">
                 <mat-form-field class="example-full-width mb-0">
                     <mat-label>Remark</mat-label>
                     <textarea matInput name="Remark" type="text" [(ngModel)]="note.Remark"
-                        #MobileNo2control></textarea>
+                        #Remarkcontrol></textarea>
                 </mat-form-field>
             </div>
             <div class="col-xl-2 col-lg-3 col-md-6 col-6 mb-0">
