--- a/web1/src/app/report/eyetest-report/eyetest-report.component.html
+++ b/web1/src/app/report/eyetest-report/eyetest-report.component.html
@@ -9,16 +9,11 @@
                                 <div class="col-md-1 col-8 p-0 ms-3">
                                     <h2>Eye Testing </h2>
                                 </div>
-                                <div class="col-md-1 col-4 ">
-                                    <button (click)="showFitter()"  mat-raised-button color="primary">
-                                        Show Filter
-                                    </button>
-                                  </div>
                             </div>
                         </div>
                         <div class="body">
                             <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="searchData()">
-                                <div class="row" *ngIf="this.searchby == true">
+                                <div class="row" >
                                     <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0">
                                             <mat-label>Filter Types</mat-label>
