--- a/web1/src/app/report/inventory-report/inventory-report.component.html
+++ b/web1/src/app/report/inventory-report/inventory-report.component.html
@@ -9,11 +9,6 @@
                 <div class="col-md-2 col-8 p-0 ms-3">
                   <h2>Inventory Report </h2>
                 </div>
-                <div class="col-md-1 col-4 ">
-                  <button (click)="showFitter()"  mat-raised-button color="primary">
-                    Show Filter
-                  </button>
-                </div>
               </div>
             </div>
             <mat-tab-group>
@@ -21,7 +16,7 @@
               <mat-tab *ngIf="viewInventoryReport" label="Inventory">
                 <div class="body">
                   <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getInventory()">
-                    <div class="row" *ngIf="this.searchby == true">
+                    <div class="row" >
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
                         <mat-form-field class="example-full-width mb-0">
                           <mat-label>From</mat-label>
@@ -318,7 +313,7 @@
               <mat-tab *ngIf="viewProductSummaryReport" label="Product Summary">
                 <div class="body">
                   <form class="p-3 pb-0" #f1="ngForm">
-                    <div class="row" *ngIf="this.searchby == true">
+                    <div class="row" >
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
                         <mat-form-field class="example-full-width mb-0">
                           <mat-label>From</mat-label>
@@ -439,7 +434,7 @@
               <mat-tab *ngIf="viewPurchaseProductExpiryReport" label="Purchase (Product Expiry)">
                 <div class="body">
                   <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="purchaseProductExpiry()">
-                    <div class="row" *ngIf="this.searchby == true">
+                    <div class="row" >
                       <div class="col-xl-2 col-lg-2 col-md-4 col-6 mb-0 ">
                         <mat-form-field class="example-full-width mb-0">
                           <mat-label>From</mat-label>
