--- a/web1/src/app/report/sale-report/sale-report.component.html
+++ b/web1/src/app/report/sale-report/sale-report.component.html
@@ -9,11 +9,6 @@
                                 <div class="col-md-1 col-7 p-0 ms-3">
                                     <h2>Sale Report </h2>
                                 </div>
-                                <div class="col-md-1 col-4 ">
-                                  <button (click)="showFitter()"  mat-raised-button color="primary">
-                                    Show Filter
-                                  </button>
-                                </div>
                             </div>
                         </div>
                         <mat-tab-group>
@@ -21,7 +16,7 @@
                             <mat-tab *ngIf="viewSaleReport" label="Sale">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getBillMaster()">
-                                        <div class="row" *ngIf="this.searchby == true">
+                                        <div class="row" >
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Filter Types</mat-label>
@@ -315,7 +310,7 @@
                             <mat-tab *ngIf="viewSaleProductReport" label="Sale (Product Type)">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getBillDetails()">
-                                        <div class="row"  *ngIf="this.searchby == true">
+                                        <div class="row" >
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Filter Types</mat-label>
@@ -757,7 +752,7 @@
                             <mat-tab *ngIf="viewSaleServiceReport" label="Sale Service">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f="ngForm" (ngSubmit)="BillService()">
-                                        <div class="row"  *ngIf="this.searchby == true">
+                                        <div class="row"  >
                                             <div class="col-xl-2 col-lg-2 col-md-2 col-6 mb-0">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>From Date</mat-label>
@@ -907,7 +902,7 @@
                             <mat-tab label="Product Cancel">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getProductCancel()">
-                                        <div class="row"  *ngIf="this.searchby == true">
+                                        <div class="row"  >
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Filter Types</mat-label>
@@ -1309,7 +1304,7 @@
                             <mat-tab label="Product Pending">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getProductPending()">
-                                        <div class="row"  *ngIf="this.searchby == true"> 
+                                        <div class="row"  > 
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>Filter Types</mat-label>
@@ -1686,7 +1681,7 @@
                             <mat-tab label="Sale (Product Expiry)">
                                 <div class="body">
                                     <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getBillExpiry()">
-                                        <div class="row"  *ngIf="this.searchby == true">
+                                        <div class="row"  >
                                             <div class="col-xl-2 col-lg-2 col-md-3 col-6 mb-0 ">
                                                 <mat-form-field class="example-full-width mb-0">
                                                     <mat-label>From</mat-label>
