--- a/web1/src/app/report/vendor-credit/vendor-credit.component.html
+++ b/web1/src/app/report/vendor-credit/vendor-credit.component.html
@@ -10,16 +10,12 @@
                                 <div class="col-md-2 col-8 p-0 ms-3">
                                     <h2>Supplier Credit Report </h2>
                                 </div>
-                                <div class="col-md-1 col-4 ">
-                                    <button (click)="showFitter()"  mat-raised-button color="primary">
-                                        Show Filter
-                                    </button>
-                                  </div>
+                              
                             </div>
                         </div>
                         <div class="body">
                             <form class="p-3 pb-0" #f1="ngForm" (ngSubmit)="getCreditReport()">
-                                <div class="row" *ngIf="this.searchby == true">
+                                <div class="row" >
                                     <div class="col-xl-2 col-lg-2 col-md-6 col-sm-12 mb-0 ">
                                         <mat-form-field class="example-full-width mb-0 paddingInp">
                                             <mat-label>From</mat-label>
