--- a/web1/src/app/report/cash-collection/cash-collection.component.css
+++ b/web1/src/app/report/cash-collection/cash-collection.component.css
@@ -1,5 +1,5 @@
 .totolRow{
-    color: red; 
+    color: rgb(220, 220, 220); 
     font-weight: 600; 
     font-size: 15px;
     text-align: center;
@@ -25,8 +25,12 @@
     margin: 0;
     padding: 0;
     cursor: pointer;
-}
+   
 
+}
+tfoot.hide-on-print{
+  display: none;
+}
 @media print {
     .content {
       page-break-before: always; /* Optional: Add page break before each content when printing */
@@ -38,6 +42,7 @@
       display: block;
       margin: 0 auto; /* Center the logo on the printed page */
     }
+  
   
     /* Add other print styles as needed */
   }
