--- a/web1/src/app/common/page404.component.html
+++ b/web1/src/app/common/page404.component.html
@@ -9,8 +9,11 @@
         </g>
       </svg>
       <div class="message-box">
-        <h1>404</h1>
-        <p style="font-size: 29px;letter-spacing: 5px; padding-top: 11px;">Page not found</p>
+        <h1>This is not an Error !</h1>
+        <p style="font-size: 20px;letter-spacing: 1px; padding-top: 11px;    line-height: 30px;">
+          Message from OPTICALGURU we keep your mistakes on our records. <br>
+          
+          Please share a screenshot to OPTICALGURU Team Thankyou.</p>
         <div class="buttons-con">
           <div class="action-link-wrap">
             <a onclick="history.back(-1)" class="link-button link-back-button">Go Back</a>
