--- a/web1/src/app/common/page404.component.html
+++ b/web1/src/app/common/page404.component.html
@@ -10,10 +10,16 @@
       </svg>
       <div class="message-box">
         <h1>This is not an Error !</h1>
-        <p style="font-size: 20px;letter-spacing: 1px; padding-top: 11px;    line-height: 30px;">
-          Message from OPTICALGURU we keep your mistakes on our records. <br>
-          
-          Please share a screenshot to OPTICALGURU Team Thankyou.</p>
+        <p style="font-size: 25px;letter-spacing: 1px; padding-top: 11px;line-height: 30px;">
+          Message from OPTICALGURU <br> We keep your mistakes on our records. 
+        </p>
+        <p style="font-size: 25px;letter-spacing: 1px; padding-top: 11px;line-height: 30px; font-weight: 500; color: #f2ff01;">
+         
+         Please Check Your Internet Connection.
+        </p>
+        <p style="font-size: 25px;letter-spacing: 1px; padding-top: 11px; line-height: 30px;">          
+          Please share a screenshot to OPTICALGURU Team <br> Thankyou.
+        </p>
         <div class="buttons-con">
           <div class="action-link-wrap">
             <a onclick="history.back(-1)" class="link-button link-back-button">Go Back</a>
