--- a/web1/src/app/common/page404.component.css
+++ b/web1/src/app/common/page404.component.css
@@ -15,9 +15,9 @@ body {
   }
   .message-box {
     height: 200px;
-    width: 380px;
+    width: 500px;
     position: absolute;
-    top: 50%;
+    top: 45%;
     left: 50%;
     margin-top: -100px;
     margin-left: 50px;
@@ -53,7 +53,7 @@ body {
     color: #fff;
   }
   @keyframes PageNot {
-    from {color: #20bc35;}
+    from {color: #f2ff01;}
     to {color: #ffffff ;}
   }
   #Polygon-1,
